cmake_minimum_required(VERSION 3.10)
project(CameraCalibration)

# 设置C++标准
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 查找OpenCV库
find_package(OpenCV REQUIRED)

# 包含OpenCV头文件目录
include_directories(${OpenCV_INCLUDE_DIRS})

# 添加可执行文件
add_executable(camera_calibration camera_calibration.cpp)

# 链接OpenCV库
target_link_libraries(camera_calibration ${OpenCV_LIBS})
